--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <nav class="nav-bar">
         <ul>
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./aboutMe.html">About Me</a></li>
-          <li><a href="./contactUs.html">Contact Us</a></li>
+          <li><a href="./aboutMe.html">About</a></li>
+          <li><a href="./contactUs.html">Contact</a></li>
         </ul>
       </nav>
     </header>
